--- a/styles.css
+++ b/styles.css
@@ -60,5 +60,29 @@ body {
 }
 
 .formulario-datos button {
-    margin: 1rem 0rem
+    margin: 1rem 0rem;
+    background-color: dodgerblue;
+    border: 0;
+    outline: 0;
+    height: 3rem;
+    border-radius: 5px;
+    text-transform: uppercase;
+    color:white;
+}
+
+.listado-tareas{
+    display:flex;
+    flex-direction: column;
+}
+
+.tarea{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 4rem;
+}
+
+.icono{
+    color:red;
+    cursor:pointer;
 }
